python3_lesson_1
>>> vergi = 29/100
>>> satis = 189
>>> vergi * satis 
54.809999999999995
>>> satis + _
243.81
>>> #' _' en son cikan toplam sonucu, satisa ekler.
... 
>>> round(_,2)
243.81
>>> vergi * satis
54.809999999999995
>>> round(_,2)
54.81
>>> round(_,1)
54.8
>>> round(34/98,3)
0.347
>>> round(34/98,2)
0.35
>>> "python v3"
'python v3'
>>> x = 'python v3 '
>>> x
'python v3 '
>>> print(x)
python v3 
>>> y = 'python \n v3'
>>> y
'python \n v3'
>>> print(y)
python 
 v3
>>> y = ' code \'gar python'
>>> y
" code 'gar python"
>>> y = "code\\gar python"
>>> y
'code\\gar python'
>>> print(y)
code\gar python
>>>  x + y
  File "<stdin>", line 1
    x + y
    ^
IndentationError: unexpected indent
>>> x+y
'python v3 code\\gar python'
>>> 4*x
'python v3 python v3 python v3 python v3 '
>>> 3*x+y
'python v3 python v3 python v3 code\\gar python'
>>> x[2]
't'
>>> x[-2]
'3'
>>> x
'python v3 '
>>> x[2:7]
'thon '
>>> x[2:-2]
'thon v'
>>> x[2:-]
  File "<stdin>", line 1
    x[2:-]
         ^
SyntaxError: invalid syntax
>>> x[2:]
'thon v3 '
>>> x[:2]
'py'
>>> len(x)
10
>>> 
